objects/Post_Visit_Follow_Up_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Additional_1__c</fullName>
        <label>Additional 1</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_2__c</fullName>
        <label>Additional 2</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_comment_1_EN__c</fullName>
        <inlineHelpText>English Translation</inlineHelpText>
        <label>Additional comment 1-EN</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_comment_1__c</fullName>
        <inlineHelpText>If Neutral, Fair or Poor on question 10:  Please describe how the Salesperson&apos;s courtesy and professionalism could be improved?</inlineHelpText>
        <label>Additional comment	 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_comment_2__c</fullName>
        <label>Additional comment	 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_number_1__c</fullName>
        <label>Additional number 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocacy_comments_EN__c</fullName>
        <description>English translation.</description>
        <inlineHelpText>English Translation</inlineHelpText>
        <label>Advocacy-comments - EN</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_comments__c</fullName>
        <inlineHelpText>Please briefly explain why you choose this score.</inlineHelpText>
        <label>Advocacy-comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, the SunPower Dealer arrived at the scheduled time Yes, the SunPower Dealer arrived at the scheduled time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The SunPower Dealer arrived later than the scheduled time, but advised me prior to the visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The SunPower Dealer arrived late with no notice The SunPower Dealer arrived late with no notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The SunPower Dealer did not show up all The SunPower Dealer did not show up all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable, no appointment scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appt_Other__c</fullName>
        <label>Appt? Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appt__c</fullName>
        <inlineHelpText>After initial contact with the SunPower Dealer, which of the following occurred next?</inlineHelpText>
        <label>Appt?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chance_Sign_Contract_Other__c</fullName>
        <label>Chance Sign Contract Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chance_sign_contract__c</fullName>
        <inlineHelpText>What is the status of your decision to get a solar electric system for your home?</inlineHelpText>
        <label>Chance sign contract</label>
        <picklist>
            <picklistValues>
                <fullName>SPWR-Partner-SPWR-PV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR-Partner-Other-PV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other-Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m evaluating the options.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I need more information.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m planning to sign a Notice to Start for a SunPower system.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;ve signed a Notice to Start for a SunPower system.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Solar comes standard with my new Home.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m no longer considering solar.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Timeframe__c</fullName>
        <label>Contact Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>I was directly connected with a SunPower Dealer, by the SunPower Customer Service Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I was contacted by the SunPower Dealer as promised I was contacted by the SunPower Dealer as promised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I was not contacted at all by the SunPower Dealer I was not contacted at all by the SunPower Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <picklist>
            <picklistValues>
                <fullName>I signed a contract with the recommended SunPower Dealer for a SunPower Solar system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I signed a contract with the recommended SunPower Dealer, but for a different manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I signed a contract with a different Dealer I signed a contract with a different Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am still undecided on purchasing a solar system I am still undecided on purchasing a solar system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am no longer interested in buying a solar system I am no longer interested in buying a solar system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Courteous_Partner__c</fullName>
        <label>Courteous Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Courteous_and_Professional__c</fullName>
        <inlineHelpText>How do you rate the salesperson&apos;s courtesy and professionalism during the meeting?</inlineHelpText>
        <label>Courteous and Professional</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable, the SunPower Dealer did not visit my home or business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Post Visit Follow Up Surveys (Customer Account)</relationshipLabel>
        <relationshipName>Post_Visit_Follow_Up_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Post Visit Follow Up Surveys</relationshipLabel>
        <relationshipName>Post_Visit_Follow_Up_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Advocacy__c</fullName>
        <label>Dealer Advocacy</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FIT__c</fullName>
        <label>FIT</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Benefits__c</fullName>
        <label>Financial Benefits</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Options__c</fullName>
        <label>Financing Options</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_preferred_Other__c</fullName>
        <label>Financing preferred Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financing_preferred__c</fullName>
        <inlineHelpText>After researching solar for your home, which is the most attractive financing option for your needs?</inlineHelpText>
        <label>Financing preferred</label>
        <picklist>
            <picklistValues>
                <fullName>Cash purchase (no financing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage/Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home equity line of credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance home with cash-back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Helpfulness__c</fullName>
        <label>Helpfulness</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investigation_Reason_Other__c</fullName>
        <label>Investigation Reason Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investigation_Reason__c</fullName>
        <inlineHelpText>What was the biggest factor in your decision to investigate a SunPower solar system for your home?</inlineHelpText>
        <label>Investigation Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <inlineHelpText>How do you rate the Sales professional&apos;s ability to answer your questions?</inlineHelpText>
        <label>Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(Opportunity_ID__r.LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Met_Dealer__c</fullName>
        <inlineHelpText>Did you eventually meet with the dealer?</inlineHelpText>
        <label>Met Dealer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_proposal_Other__c</fullName>
        <label>No proposal Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_proposal__c</fullName>
        <inlineHelpText>Which of the following is true for your situation?</inlineHelpText>
        <label>No proposal</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Time_appointment_Other__c</fullName>
        <label>On Time appointment Other</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_time_Appointment__c</fullName>
        <inlineHelpText>Was the SunPower Dealer Representative on time to the scheduled appointment?</inlineHelpText>
        <label>On-time Appointment</label>
        <picklist>
            <picklistValues>
                <fullName>On-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late-Advise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late-No-advise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-Showed-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-Showed Up, later rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-Showed Up, not rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Alliance_Program_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Alliance Program Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Creation_Date__c</fullName>
        <description>This Feild was created to show the Opportunity Creation Date.</description>
        <label>Opportunity Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Post Visit Follow Up Surveys</relationshipLabel>
        <relationshipName>Post_Visit_Follow_Up_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>11/20/2014 Case 00426142 Requested by Kristel, to be used on survey templates.</description>
        <formula>Opportunity_ID__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <description>11/20/2014 Case 00426142 Requested by Kristel, to be used on survey templates.</description>
        <formula>Opportunity_ID__r.Owner.FirstName+ &quot; &quot; + Opportunity_ID__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>We have created formula field as salesforce has limitation to pull cross object field values in Post Visit Followup Survey click tools notification.Please refer case# 00452669.</description>
        <formula>TEXT(Opportunity_ID__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Experience__c</fullName>
        <label>Overall Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Proposal__c</fullName>
        <label>Overall Proposal</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PV_Explanation__c</fullName>
        <label>PV Explanation</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Post Visit Follow Up Surveys</relationshipLabel>
        <relationshipName>Post_Visit_Follow_Up_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Appt_Confirm__c</fullName>
        <inlineHelpText>After you were contacted initially and an appointment was set for a SunPower dealer to come to your home, did the dealer confirm the appointment time with you in advance?</inlineHelpText>
        <label>Partner Appt Confirm</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, after more than 2 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, within 48 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, the person was on time.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, the person was late, but advised me prior to the scheduled time.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, they were late with no notice.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, the person did not show up to the appointment, but we later rescheduled.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, they did not show up, and we did not reschedule.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I cancelled the appointment prior to the meeting time.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We haven&apos;t met yet. The scheduled date is coming up.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Other__c</fullName>
        <label>Partner Contact Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <inlineHelpText>After contacting SunPower, how long did it take before you were contacted by the SunPower Dealer?</inlineHelpText>
        <label>Partner Contact</label>
        <picklist>
            <picklistValues>
                <fullName>48hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred by CSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;1hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-4hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-24hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;1day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between 1 hr and 1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A. Self-Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By the next day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I initiated contact with SunPower myself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I was not contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t recall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Post_Visit_Follow_Up_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_advocacy__c</fullName>
        <inlineHelpText>How likely are you to recommend the SunPower Dealer to a friend, relative, neighbor or colleague?(0-10 scale)</inlineHelpText>
        <label>Partner-advocacy</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_experience__c</fullName>
        <label>Partner-experience</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permitting__c</fullName>
        <label>Permitting</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source__c</fullName>
        <formula>Opportunity_ID__r.Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Delivery_Time__c</fullName>
        <label>Proposal Delivery Time</label>
        <picklist>
            <picklistValues>
                <fullName>I received the proposal from the SunPower Dealer during the time of the visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I received the proposal soon after the SunPower Dealer visited my home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I do not recall the duration of time to receive my proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I did not receive a proposal from the SunPower Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Information_Financial_Options__c</fullName>
        <label>Proposal Information Financial Options</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Information_Helpfulness__c</fullName>
        <label>Proposal Information Helpfulness</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>